--- a/Develop/style.css
+++ b/Develop/style.css
@@ -34,6 +34,7 @@ textarea{
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid transparent;
+  
 }
 
 .hour {
@@ -69,4 +70,9 @@ textarea{
 .saveBtn i:hover {
   font-size: 50px;
   transition: all .3s ease-in-out;
+}
+
+.task {
+  border-left: 1px solid black;
+  border-right: 1px solid #000000;
 }
