--- a/style.css
+++ b/style.css
@@ -67,10 +67,10 @@ textarea{
   text-align: center;
 }
 
-.saveBtn i:hover {
+/* .saveBtn i:hover {
   font-size: 50px;
   transition: all .3s ease-in-out;
-}
+} */
 
 .task {
   border-left: 1px solid black;
